@@ -34,6 +34,8 @@ $_MODULE['<{packetery}prestashop>packetery_5068c162a60b5859f973f701333f45c5'] = 
 $_MODULE['<{packetery}prestashop>packetery_e9426c7bff45881b4ca7fbd3cb3d2efc'] = 'Výdejní místo Zásilkovny';
 $_MODULE['<{packetery}prestashop>packetery_b718adec73e04ce3ec720dd11a06a308'] = 'ID';
 $_MODULE['<{packetery}prestashop>packetery_914419aa32f04011357d3b604a86d7eb'] = 'Prepravca';
+$_MODULE['<{packetery}prestashop>packetery_dad1f8d794ee0dd7753fe75e73b78f31'] = 'Zóny';
+$_MODULE['<{packetery}prestashop>packetery_790d59ef178acbc75d233bf4211763c6'] = 'Země';
 $_MODULE['<{packetery}prestashop>packetery_09ab0fbcf3828b382717f433ba5379af'] = 'Je doručení přes Zásilkovnu';
 $_MODULE['<{packetery}prestashop>packetery_e55f75a29310d7b60f7ac1d390c8ae42'] = 'Modul';
 $_MODULE['<{packetery}prestashop>packetery_854203cccade0bbe21be239a208aea49'] = 'meno_modulu';
